<resources>
    <string name="app_name">Basic Quiz App</string>
    <string name="ok">Ok</string>
    <string name="score_0">Score: 0</string>
    <string name="correct_ans_xyz">Correct Ans: xyz</string>
    <string name="ok_wrong">Ok</string>
    <string name="time_over">Time Over</string>
    <string name="time_over_ok">Ok</string>
    <string name="home">Home</string>
    <string name="rate_app">Rate App</string>
    <string name="share_score">Share Score</string>
    <string name="play_again">Play Again</string>
    <string name="skip_0">Skip:0</string>
    <string name="score_0_result">Score: 0</string>
    <string name="wrong_0_result">Wrong:0</string>
    <string name="correct_0_result">Correct:0</string>
    <string name="your_quiz_result">Your Quiz Result</string>
    <string name="basic_quiz_app">Basic Quiz App</string>
    <string name="play_quiz">Play Quiz</string>
    <string name="basic_quiz_app_play">Basic Quiz App Play</string>
    <string name="basic_quiz_app_play_1">Basic Quiz App</string>
    <string name="score_00">Score:00</string>
    <string name="_1_10">1/10</string>
    <string name="time_00">Time:00</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="next_question">Next Question</string>
    <string name="skip_0_1">Skip:0</string>
    <string name="submit">Submit</string>
    <string name="give_your_experience">Give Your Experience</string>
    <string name="home_b">Home</string>
    <string name="back">Back</string>
    <string name="feedback">Feedback</string>
    <string name="correct_0">Correct:0</string>
    <string name="todo">TODO</string>
    <string name="wrong_0">Wrong:0</string>
    <string name="result_0">Result:0</string>
    <string name="skip_00">Skip:0</string>
    <string name="todo_1">TODO</string>
</resources>